--- a/Kodi.Utilities/Kodi.Utilities.csproj
+++ b/Kodi.Utilities/Kodi.Utilities.csproj
@@ -34,38 +34,56 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Attributes\FieldAllocationAttribute.cs" />
     <Compile Include="Attributes\FormatterTypeAttribute.cs" />
     <Compile Include="Collection\RuleCollection.cs" />
     <Compile Include="Collection\ValueCollection.cs" />
+    <Compile Include="Data\Duration.cs" />
+    <Compile Include="Data\ISO6392LanguageFactory.cs" />
     <Compile Include="Exceptions\FieldExistsException.cs" />
     <Compile Include="Exceptions\InvalidFieldTypeValue.cs" />
     <Compile Include="Exceptions\InvalidRuleCollectionType.cs" />
     <Compile Include="Exceptions\MissingFieldAttributeException.cs" />
     <Compile Include="Exceptions\MissingFormatterTypeAttrException.cs" />
+    <Compile Include="Extensions\String.cs" />
     <Compile Include="Formatters\BoolFormatter.cs" />
+    <Compile Include="Formatters\DurationFormatter.cs" />
+    <Compile Include="Formatters\LanguageFormatter.cs" />
     <Compile Include="Formatters\DateFormatter.cs" />
     <Compile Include="Formatters\IntFormatter.cs" />
     <Compile Include="Formatters\StringFormatter.cs" />
     <Compile Include="Interfaces\IFormatter.cs" />
+    <Compile Include="Interfaces\IOperator.cs" />
     <Compile Include="Interfaces\IRule.cs" />
+    <Compile Include="Data\ISO6392Language.cs" />
+    <Compile Include="Operators\After.cs" />
+    <Compile Include="Operators\Before.cs" />
+    <Compile Include="Operators\False.cs" />
+    <Compile Include="Operators\Contains.cs" />
+    <Compile Include="Operators\DoesNotContain.cs" />
+    <Compile Include="Operators\EndsWith.cs" />
+    <Compile Include="Operators\GreaterThan.cs" />
+    <Compile Include="Operators\InTheLast.cs" />
+    <Compile Include="Operators\Is.cs" />
+    <Compile Include="Operators\IsNot.cs" />
+    <Compile Include="Operators\LessThan.cs" />
+    <Compile Include="Operators\NotInTheLast.cs" />
+    <Compile Include="Operators\StartsWith.cs" />
+    <Compile Include="Operators\True.cs" />
     <Compile Include="Playlist\Fields\Actor.cs" />
     <Compile Include="Playlist\Fields\AirDateTime.cs" />
     <Compile Include="Playlist\Fields\Album.cs" />
-    <Compile Include="Playlist\Fields\Albumartist.cs" />
+    <Compile Include="Playlist\Fields\AlbumArtist.cs" />
     <Compile Include="Playlist\Fields\Artist.cs" />
-    <Compile Include="Playlist\Fields\Audiochannels.cs" />
-    <Compile Include="Playlist\Fields\Audiocodec.cs" />
-    <Compile Include="Playlist\Fields\Audiolanguage.cs" />
+    <Compile Include="Playlist\Fields\AudioChannels.cs" />
+    <Compile Include="Playlist\Fields\AudioCodec.cs" />
+    <Compile Include="Playlist\Fields\AudioLanguage.cs" />
     <Compile Include="Playlist\Fields\Bandformed.cs" />
     <Compile Include="Playlist\Fields\Biography.cs" />
     <Compile Include="Playlist\Fields\Born.cs" />
     <Compile Include="Playlist\Fields\Comment.cs" />
     <Compile Include="Playlist\Fields\Country.cs" />
-    <Compile Include="Playlist\Fields\DateTimeadded.cs" />
+    <Compile Include="Playlist\Fields\DateTimeAdded.cs" />
     <Compile Include="Playlist\Fields\Died.cs" />
     <Compile Include="Playlist\Fields\Director.cs" />
     <Compile Include="Playlist\Fields\Disbanded.cs" />
@@ -73,20 +91,20 @@
     <Compile Include="Playlist\Fields\Episodetitle.cs" />
     <Compile Include="Playlist\Fields\Filename.cs" />
     <Compile Include="Playlist\Fields\Genre.cs" />
-    <Compile Include="Playlist\Fields\Hastrailer.cs" />
-    <Compile Include="Playlist\Fields\Inprogress.cs" />
+    <Compile Include="Playlist\Fields\HasTrailer.cs" />
+    <Compile Include="Playlist\Fields\InProgress.cs" />
     <Compile Include="Playlist\Fields\Instruments.cs" />
     <Compile Include="Playlist\Fields\Label.cs" />
-    <Compile Include="Playlist\Fields\Lastplayed.cs" />
+    <Compile Include="Playlist\Fields\LastPlayed.cs" />
     <Compile Include="Playlist\Fields\Moods.cs" />
-    <Compile Include="Playlist\Fields\Mpaarating.cs" />
-    <Compile Include="Playlist\Fields\Numepisodes.cs" />
-    <Compile Include="Playlist\Fields\Numwatched.cs" />
+    <Compile Include="Playlist\Fields\MPAARating.cs" />
+    <Compile Include="Playlist\Fields\NumEpisodes.cs" />
+    <Compile Include="Playlist\Fields\NumWatched.cs" />
     <Compile Include="Playlist\Fields\Path.cs" />
-    <Compile Include="Playlist\Fields\Playcount.cs" />
+    <Compile Include="Playlist\Fields\PlayCount.cs" />
     <Compile Include="Playlist\Fields\PlayList.cs" />
     <Compile Include="Playlist\Fields\Plot.cs" />
-    <Compile Include="Playlist\Fields\Plotoutline.cs" />
+    <Compile Include="Playlist\Fields\PlotOutline.cs" />
     <Compile Include="Playlist\Fields\Rating.cs" />
     <Compile Include="Playlist\Fields\Review.cs" />
     <Compile Include="Playlist\Fields\Season.cs" />
@@ -94,7 +112,7 @@
     <Compile Include="Playlist\Fields\Status.cs" />
     <Compile Include="Playlist\Fields\Studio.cs" />
     <Compile Include="Playlist\Fields\Styles.cs" />
-    <Compile Include="Playlist\Fields\Subtitlelanguage.cs" />
+    <Compile Include="Playlist\Fields\SubtitleLanguage.cs" />
     <Compile Include="Playlist\Fields\Tag.cs" />
     <Compile Include="Playlist\Fields\Tagline.cs" />
     <Compile Include="Playlist\Fields\Themes.cs" />
@@ -102,11 +120,11 @@
     <Compile Include="Playlist\Fields\Title.cs" />
     <Compile Include="Playlist\Fields\Top250.cs" />
     <Compile Include="Playlist\Fields\Trackint.cs" />
-    <Compile Include="Playlist\Fields\Tvshow.cs" />
+    <Compile Include="Playlist\Fields\TVShow.cs" />
     <Compile Include="Playlist\Fields\MediaType.cs" />
-    <Compile Include="Playlist\Fields\Videoaspect.cs" />
-    <Compile Include="Playlist\Fields\Videocodec.cs" />
-    <Compile Include="Playlist\Fields\Videoresolution.cs" />
+    <Compile Include="Playlist\Fields\VideoAspect.cs" />
+    <Compile Include="Playlist\Fields\VideoCodec.cs" />
+    <Compile Include="Playlist\Fields\VideoResolution.cs" />
     <Compile Include="Playlist\Fields\Votes.cs" />
     <Compile Include="Playlist\Fields\Writers.cs" />
     <Compile Include="Playlist\Fields\Year.cs" />
@@ -122,10 +140,15 @@
       <HintPath>packages\PCLStorage.1.0.2\lib\portable-net45+wp8+wpa81+win8+monoandroid+monotouch+Xamarin.iOS+Xamarin.Mac\PCLStorage.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\netstandard1.1\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
