--- a/Kodi.Utilities/Kodi.Utilities.csproj
+++ b/Kodi.Utilities/Kodi.Utilities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Exceptions\MissingFormatterTypeAttrException.cs" />
     <Compile Include="Exceptions\MissingValueException.cs" />
     <Compile Include="Exceptions\NonPositiveIntegerException.cs" />
+    <Compile Include="Exceptions\NoValueAllowedForRuleException.cs" />
     <Compile Include="Exceptions\RuleParseException.cs" />
     <Compile Include="Exceptions\FieldNotValidForTypeException.cs" />
     <Compile Include="Extensions\String.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Formatters\IntFormatter.cs" />
     <Compile Include="Formatters\StringFormatter.cs" />
     <Compile Include="Interfaces\IFormatter.cs" />
+    <Compile Include="Interfaces\IGroup.cs" />
     <Compile Include="Interfaces\IOperator.cs" />
     <Compile Include="Interfaces\IParser.cs" />
     <Compile Include="Interfaces\IRule.cs" />
@@ -146,6 +148,18 @@
     <Compile Include="Playlist\Fields\Votes.cs" />
     <Compile Include="Playlist\Fields\Writers.cs" />
     <Compile Include="Playlist\Fields\Year.cs" />
+    <Compile Include="Playlist\Groups\Actors.cs" />
+    <Compile Include="Playlist\Groups\Albums.cs" />
+    <Compile Include="Playlist\Groups\Artists.cs" />
+    <Compile Include="Playlist\Groups\Countries.cs" />
+    <Compile Include="Playlist\Groups\Directors.cs" />
+    <Compile Include="Playlist\Groups\Genres.cs" />
+    <Compile Include="Playlist\Groups\None.cs" />
+    <Compile Include="Playlist\Groups\Sets.cs" />
+    <Compile Include="Playlist\Groups\Studios.cs" />
+    <Compile Include="Playlist\Groups\Tags.cs" />
+    <Compile Include="Playlist\Groups\Writers.cs" />
+    <Compile Include="Playlist\Groups\Years.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Playlist\SmartPlaylist.cs" />
     <Compile Include="Validators\PlaylistValidator.cs" />
