--- a/Kodi.Utilities.Test/Kodi.Utilities.Test.csproj
+++ b/Kodi.Utilities.Test/Kodi.Utilities.Test.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="FieldTest.cs" />
     <Compile Include="Formatters.cs" />
+    <Compile Include="GroupTest.cs" />
     <Compile Include="LanguagesTest.cs" />
     <Compile Include="PlaylistTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
